# fpar-based-vci-example

./: .gitignore  FUTURE_PLANS.md  GEMINI.md  README.md  WORKFLOW_PLAN.md  pyproject.toml
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
infrastructure/tilebox_infrastructure/: __init__.py  auto_scaling_cluster.py
ingestion/: config.go  go.mod  go.sum  it2005FPRCF.txt  it2010FPRCF.txt  main.go  mt0101FPRCF.txt  mt0107FPRCF.txt  schema.json
ingestion/protogen/tilebox/v1/: ModisFpar.pb.go
workflow/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.py  ingest.py  inspect_geotiff.py  main.py  memory_logger.py  minmax.py  pyproject.toml  runner.py  submit_job.py  utils.py  vci.py  vci_gif_example.py  vci_visualization.py  vci_workflow.py  zarr_helper.py
workflow/fpar_to_vci/: chunks.py  cli.py  config.py  ingest.py  memory_logger.py  minmax.py  runner.py  vci.py  vci_visualization.py  zarr_helpers.py
workflow/vci_workflow/: cli.py  ingest.py  memory_logger.py  minmax.py  runner.py  vci.py  vci_visualization.py  zarr.py  zarr_helpers.py
workflow/vci_workflow/tasks/: end_to_end.py  fpar_to_zarr.py  minmax.py  vci.py  video.py
