[project]
name = "infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.186.0",
    "pulumi-command>=1.1.0",
    "pulumi-docker>=4.8.0",
    "pulumi-gcp>=8.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
]
