[project]
name = "vci-workflow"
version = "0.1.0"
description = "A Tilebox workflow for calculating the Vegetation Condition Index (VCI) from FPAR data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.23.1",
    "guppy3>=3.1.5",
    "humanize>=4.13.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "obstore>=0.7.1",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "rasterio>=1.4.3",
    "tilebox-datasets>=0.39.0",
    "tilebox-storage>=0.39.0",
    "tilebox-workflows>=0.39.0",
    "xarray>=2025.7.1",
    "zarr>=3.1.0",
]

[dependency-groups]
dev = ["pyright>=1.1.404", "ruff>=0.12.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["vci_workflow"]

[tool.hatch.build.targets.wheel]
packages = ["vci_workflow"]
